positioning, added animation to sizes and quantity

--- a/checkout.html
+++ b/checkout.html
@@ -34,19 +34,19 @@
                 <fieldset>
                     <legend>Billing Address</legend>
                     <label for="firstname">First Name</label>
-                    <input type="text" id="firstname" name="firstname" title="Enter Your First Name" class="form__input" required>
+                    <input type="text" id="firstname" name="firstname" title="Enter Your First Name" class="form__input billing__info" required>
                     <label for="lastname">Last Name</label>
-                    <input type="text" id="lastname" name="lastname" title="Enter Your Last Name" class="form__input" required>
+                    <input type="text" id="lastname" name="lastname" title="Enter Your Last Name" class="form__input billing__info" required>
                     <label for="address">Address</label>
-                    <input type="text" id="address" name="address" title="Enter Your Address" class="form__input" required>
+                    <input type="text" id="address" name="address" title="Enter Your Address" class="form__input billing__info" required>
                     <label for="zipcode">Zip Code</label>
-                    <input type="tel" id="zipcode" name="zipcode" title="Enter Your Zip Code" class="form__input" required>
+                    <input type="tel" id="zipcode" name="zipcode" title="Enter Your Zip Code" class="form__input billing__info" required>
                     <label for="city">City</label>
-                    <input type="text" id="city" name="city" title="Enter Your City" class="form__input" required>
+                    <input type="text" id="city" name="city" title="Enter Your City" class="form__input billing__info" required>
                     <label for="phonenumber">Phone Number</label>
-                    <input type="tel" id="phonenumber" name="phonenumber" title="Enter Your Phone Number" class="form__input" required>
+                    <input type="tel" id="phonenumber" name="phonenumber" title="Enter Your Phone Number" class="form__input billing__info" required>
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" title="Enter Your Email" class="form__input" required>
+                    <input type="email" id="email" name="email" title="Enter Your Email" class="form__input billing__info" required>
                 </fieldset>
                 <fieldset>
                     <legend>Delivery Method</legend>
@@ -64,10 +64,10 @@
                     <div class="payment-method">
                         <input type="radio" id="creditcard" name="payment" value="creditcard" class="form__input" checked>
                         <label for="creditcard">Credit Card
-                        <input type="tel" id="creditcardnumber" name="creditcardnumber" title="Enter Your Card Number" class="form__input" placeholder="Card Number" required>
-                        <input type="text" id="cardholdername" name="cardholdername" title="Enter Cardholder Name" class="form__input" placeholder="Cardholder Name" required>
-                        <input type="tel" id="expirationdate" name="expirationdate" title="Enter Expiration Date" class="form__input" placeholder="Exp. Date MM.YYYY" required>
-                        <input type="tel" id="cvv" name="cvv" title="Enter CVV code" class="form__input" placeholder="CVV" required>
+                        <input type="tel" id="creditcardnumber" name="creditcardnumber" title="Enter Your Card Number" class="form__input payment__info" placeholder="Card Number" required>
+                        <input type="text" id="cardholdername" name="cardholdername" title="Enter Cardholder Name" class="form__input payment__info" placeholder="Cardholder Name" required>
+                        <input type="tel" id="expirationdate" name="expirationdate" title="Enter Expiration Date" class="form__input payment__info" placeholder="Exp. Date MM.YYYY" required>
+                        <input type="tel" id="cvv" name="cvv" title="Enter CVV code" class="form__input payment__info" placeholder="CVV" required>
                         </label>
                     </div>
                 <div class="payment-method">
