--- a/product.html
+++ b/product.html
@@ -59,11 +59,16 @@
                 </div>
                 <p>Color: Red, Blue, Green, Black</p>
                 <div class="sizes">
-                    <p class="circle-size">S</p>
-                    <p class="circle-size">M</p>
-                    <p class="circle-size">L</p>
-                    <p class="circle-size">XL</p>
-                    <p class="circle-size">XXL</p>
+                    <input type="radio" id="size-s" name="size" value="s" class="size-radio">
+                    <label for="size-s" class="size-label circle-size">S</label>
+                    <input type="radio" id="size-m" name="size" value="m" class="size-radio">
+                    <label for="size-m" class="size-label circle-size">M</label>
+                    <input type="radio" id="size-l" name="size" value="l" class="size-radio">
+                    <label for="size-l" class="size-label circle-size">L</label>
+                    <input type="radio" id="size-xl" name="size" value="xl" class="size-radio">
+                    <label for="size-xl" class="size-label circle-size">XL</label>
+                    <input type="radio" id="size-xxl" name="size" value="xxl" class="size-radio">
+                    <label for="size-xxl" class="size-label circle-size">XXL</label>
                 </div>
                 <p class="price__product price__cart">$79</p>
                 <div class="cart__actions">
