--- a/confirmation.html
+++ b/confirmation.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Here you can see your order confirmation and your order details.">
     <title>Confirmation</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/confirmation.css" rel="stylesheet">
     <link href="css/media.css" rel="stylesheet">
@@ -93,7 +99,7 @@
                 <img src="images/Logo-with-slogan.png" alt="Logo with Slogan" class="logo-with-slogan">
             </div>
             <div>
-                <h3 class="shop__heading">Shop</h3>
+                <h3 class="footer__headings">Shop</h3>
                 <ul>
                     <li>Men</li>
                     <li>Women</li>
