--- a/product.html
+++ b/product.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Endurance Softshell Jacket information page">
     <title>Endurance Softshell Jacket</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/product.css" rel="stylesheet">
     <link href="css/media.css" rel="stylesheet">
@@ -23,14 +29,14 @@
             <ul class="nav-links">
                 <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
                 <li><a href="mens-jackets.html">Men's</a></li>
-                <li><a href="womens.html">Women's</a></li>
-                <li><a href="sale.html">Sale</a></li>
-                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="coming-soon.html">Women's</a></li>
+                <li><a href="coming-soon.html">Sale</a></li>
+                <li><a href="coming-soon.html">About Us</a></li>
             </ul>
             <section class="nav-icons">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <i class="fa-solid fa-user"></i>
-                <i class="fa-solid fa-heart"></i>
+                <i class="fa-solid fa-magnifying-glass icon"></i>
+                <i class="fa-solid fa-user icon"></i>
+                <i class="fa-solid fa-heart icon"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
             </section>
         </nav>
@@ -49,15 +55,15 @@
             <div class="product-info__image">
                 <img src="images/Jacket-1.jpg" alt="Red Softshell Jacket" class="product-info-image">
             </div>
-            <div>
+            <div class="product-info__content">
                 <h1>Endurance Softshell Jacket</h1>
+                <p class="color-choosen-red">Color: Red</p>
                 <div class="colorchoice-big">
                     <div class="circle-red-big"></div>
                     <div class="circle-blue-big"></div>
                     <div class="circle-green-big"></div>
                     <div class="circle-black-big"></div>
                 </div>
-                <p>Color: Red, Blue, Green, Black</p>
                 <div class="sizes">
                     <input type="radio" id="size-s" name="size" value="s" class="size-radio">
                     <label for="size-s" class="size-label circle-size">S</label>
@@ -158,7 +164,7 @@
                 <img src="images/Logo-with-slogan.png" alt="Logo with Slogan" class="logo-with-slogan">
             </div>
             <div>
-                <h3 class="shop__heading">Shop</h3>
+                <h3 class="footer__headings">Shop</h3>
                 <ul>
                     <li>Men</li>
                     <li>Women</li>
