--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                 <ul class="nav-links">
                         <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
                         <li><a href="mens-jackets.html">Men's</a></li>
-                        <li><a href="womens.html">Women's</a></li>
-                        <li><a href="sale.html">Sale</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
+                        <li><a href="coming-soon.html">Women's</a></li>
+                        <li><a href="coming-soon.html">Sale</a></li>
+                        <li><a href="coming-soon.html">About Us</a></li>
                 </ul>
                 <section class="nav-icons">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <i class="fa-solid fa-user"></i>
-                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-magnifying-glass icon"></i>
+                        <i class="fa-solid fa-user icon"></i>
+                        <i class="fa-solid fa-heart icon"></i>
                         <i class="fa-solid fa-cart-shopping"></i>
                 </section>
             </nav>
@@ -66,20 +66,20 @@
                     <img src="images/Logo-with-slogan.png" alt="Logo with Slogan" class="logo-with-slogan">
                 </div>
                 <div>
-                    <h3 class="shop__heading">Shop</h3>
-                    <ul>
-                        <li>Men</li>
-                        <li>Women</li>
-                        <li>Sale</li>
-                        <li>Gift Card</li>
-                    </ul>
+                    <h3 class="footer__headings">Shop</h3>
+                        <ul>
+                            <li>Men</li>
+                            <li>Women</li>
+                            <li>Sale</li>
+                            <li>Gift Card</li>
+                        </ul>
                 </div>
                 <div>
                     <h3 class="footer__headings">My account</h3>
-                    <ul>
-                        <li>Log in/Sign up</li>
-                        <li>Order Status</li>
-                    </ul>
+                        <ul>
+                            <li>Log in/Sign up</li>
+                            <li>Order Status</li>
+                        </ul>
                 </div>
                 <div>
                     <h3 class="footer__headings">Help</h3>
