Validator and WAVE testing

--- a/cart.html
+++ b/cart.html
@@ -31,8 +31,7 @@
     </header>
     <main class="main__content">
         <nav class="nav-back">
-             <a href="product.html"><i class="fa-solid fa-arrow-left"></i></a> 
-             <a href="product.html"><p>Back</p></a>
+             <a href="product.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
         </nav>
         <h1>Cart</h1>
         <section class="cart__content">
@@ -93,7 +92,7 @@
                     <p class="price-extra-product">$89</p>
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div>
-                        <input type="checkbox" id="heart-checkbox-11" class="heart-checkbox"/>
+                        <input type="checkbox" id="heart-checkbox-11" class="heart-checkbox">
                         <label for="heart-checkbox-11" class="heart-checkbox-icon"></label>     
                     </div>                 
                  </div>
@@ -111,7 +110,7 @@
                     <p class="price-extra-product">$99</p>
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div>
-                        <input type="checkbox" id="heart-checkbox-12" class="heart-checkbox"/>
+                        <input type="checkbox" id="heart-checkbox-12" class="heart-checkbox">
                         <label for="heart-checkbox-12" class="heart-checkbox-icon"></label>     
                     </div>                  
                 </div>
@@ -130,7 +129,7 @@
                     <p class="price-extra-product">$59</p>
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div>
-                        <input type="checkbox" id="heart-checkbox-13" class="heart-checkbox"/>
+                        <input type="checkbox" id="heart-checkbox-13" class="heart-checkbox">
                         <label for="heart-checkbox-13" class="heart-checkbox-icon"></label>     
                     </div>                  
                 </div>
