--- a/coming-soon.html
+++ b/coming-soon.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <nav class="coming-soon-nav">
-        <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
+        <a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a>
     </nav>
     <section class="coming-soon">
         <h1>Coming Soon</h1>
