--- a/confirmation.html
+++ b/confirmation.html
@@ -31,8 +31,7 @@
     </header>
     <main class="main__content">
         <nav class="nav-back">
-            <a href="checkout.html"><i class="fa-solid fa-arrow-left"></i></a> 
-            <a href="checkout.html"><p>Back</p></a>
+            <a href="checkout.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
        </nav>
         <section class="confirmation">
             <i class="fa-solid fa-circle-check confirmation-icon"></i>
@@ -86,11 +85,9 @@
                 </div>
             </section>
         </div>
-        <section>
-             <div class="continue-shopping__button">
-                <a href="index.html" class="continue-shopping">Continue Shopping</a>
-            </div> 
-        </section>
+        <div class="continue-shopping__button">
+            <a href="index.html" class="continue-shopping">Continue Shopping</a>
+        </div> 
         <section class="camping-image"></section>
     </main>
     <footer>
