--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Rainydays</title>
         <meta name="description" content="This is a page where you can buy jackets">
