--- a/mens-jackets.html
+++ b/mens-jackets.html
@@ -46,8 +46,7 @@
             <a href="index.html" class="nav-breadcrumbs">Home</a>
             <a href="mens-jackets.html" class="nav-breadcrumbs slash">Men's Jackets</a>
             <div class="nav-back">
-                <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a> 
-                <a href="index.html"><p>Back</p></a>
+                <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
             </div>
         </nav>
         <h1>Men's Jackets</h1>
@@ -74,8 +73,8 @@
                     <p class="price__product">$79</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
-                        <input type="checkbox" id="heart-checkbox-1" class="heart-checkbox"/>
                         <label for="heart-checkbox-1" class="heart-checkbox-icon"></label>     
+                        <input type="checkbox" id="heart-checkbox-1" class="heart-checkbox">
                     </div>
                 </div>     
             </div>
@@ -92,7 +91,7 @@
                     <p class="price__product">$79</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
-                        <input type="checkbox" id="heart-checkbox-2" class="heart-checkbox"/>
+                        <input type="checkbox" id="heart-checkbox-2" class="heart-checkbox">
                         <label for="heart-checkbox-2" class="heart-checkbox-icon"></label>     
                     </div>                
                 </div>
@@ -109,7 +108,7 @@
                     <p class="price__product">$79</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
-                        <input type="checkbox" id="heart-checkbox-3" class="heart-checkbox"/>
+                        <input type="checkbox" id="heart-checkbox-3" class="heart-checkbox">
                         <label for="heart-checkbox-3" class="heart-checkbox-icon"></label>     
                     </div>                  
                 </div>
@@ -125,7 +124,7 @@
                     <p class="price__product">$79</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
-                        <input type="checkbox" id="heart-checkbox-4" class="heart-checkbox"/>
+                        <input type="checkbox" id="heart-checkbox-4" class="heart-checkbox">
                         <label for="heart-checkbox-4" class="heart-checkbox-icon"></label>     
                     </div>                  
                 </div>
@@ -144,7 +143,7 @@
                     <p class="price__product">$79</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
-                        <input type="checkbox" id="heart-checkbox-5" class="heart-checkbox"/>
+                        <input type="checkbox" id="heart-checkbox-5" class="heart-checkbox">
                         <label for="heart-checkbox-5" class="heart-checkbox-icon"></label>     
                     </div>                  
                 </div>
@@ -161,7 +160,7 @@
                     <p class="price__product">$79</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
-                        <input type="checkbox" id="heart-checkbox-6" class="heart-checkbox"/>
+                        <input type="checkbox" id="heart-checkbox-6" class="heart-checkbox">
                         <label for="heart-checkbox-6" class="heart-checkbox-icon"></label>     
                     </div>                  
                 </div>
