--- a/product.html
+++ b/product.html
@@ -47,8 +47,7 @@
             <a href="mens-jackets.html" class="nav-breadcrumbs slash">Men's Jackets</a>
             <a href="product.html" class="nav-breadcrumbs slash">Endurance Softshell Jacket</a>
             <div class="nav-back">
-                 <a href="mens-jackets.html"><i class="fa-solid fa-arrow-left"></i></a> 
-                <a href="mens-jackets.html"><p>Back</p></a>
+                <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Back</a> 
             </div>
         </nav>
         <section class="product-info">
@@ -79,7 +78,7 @@
                 <p class="price__product price__cart">$79</p>
                 <div class="cart__actions">
                     <a href="cart.html" class="add-to-cart-button">Add to Cart</a>
-                    <input type="checkbox" id="heart-checkbox-7" class="heart-checkbox"/>
+                    <input type="checkbox" id="heart-checkbox-7" class="heart-checkbox">
                     <label for="heart-checkbox-7" class="heart-checkbox-icon heart-checkbox-7"></label> 
                 </div>
             </div>
@@ -114,7 +113,7 @@
                     <p class="price-extra-product">$89</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
-                        <input type="checkbox" id="heart-checkbox-8" class="heart-checkbox"/>
+                        <input type="checkbox" id="heart-checkbox-8" class="heart-checkbox">
                         <label for="heart-checkbox-8" class="heart-checkbox-icon"></label>     
                     </div>                  
                 </div>
@@ -132,7 +131,7 @@
                     <p class="price-extra-product">$99</p>
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div>
-                        <input type="checkbox" id="heart-checkbox-9" class="heart-checkbox"/>
+                        <input type="checkbox" id="heart-checkbox-9" class="heart-checkbox">
                         <label for="heart-checkbox-9" class="heart-checkbox-icon"></label>     
                     </div>                  
                 </div>
@@ -151,7 +150,7 @@
                     <p class="price-extra-product">$59</p>
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div>
-                        <input type="checkbox" id="heart-checkbox-10" class="heart-checkbox"/>
+                        <input type="checkbox" id="heart-checkbox-10" class="heart-checkbox">
                         <label for="heart-checkbox-10" class="heart-checkbox-icon"></label>     
                     </div>                  
                 </div>
