--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
         <header>
             <nav class="nav__content">
-                <input type="checkbox" id="menu-checkbox">
+                <input type="checkbox" id="menu-checkbox" aria-label="Like this item">
                 <label for="menu-checkbox" id="menu-icon" class="hamburger-icon"><i class="fa-solid fa-bars"></i></label>
                 <ul class="nav-links">
                         <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
