--- a/mens-jackets.html
+++ b/mens-jackets.html
@@ -74,7 +74,7 @@
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
                         <label for="heart-checkbox-1" class="heart-checkbox-icon"></label>     
-                        <input type="checkbox" id="heart-checkbox-1" class="heart-checkbox">
+                        <input type="checkbox" id="heart-checkbox-1" class="heart-checkbox" aria-label="Like this item">
                     </div>
                 </div>     
             </div>
@@ -91,7 +91,7 @@
                     <p class="price__product">$79</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
-                        <input type="checkbox" id="heart-checkbox-2" class="heart-checkbox">
+                        <input type="checkbox" id="heart-checkbox-2" class="heart-checkbox" aria-label="Like this item">
                         <label for="heart-checkbox-2" class="heart-checkbox-icon"></label>     
                     </div>                
                 </div>
