--- a/mens-jackets.html
+++ b/mens-jackets.html
@@ -73,7 +73,7 @@
                     <p class="price__product">$79</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
-                        <label for="heart-checkbox-1" class="heart-checkbox-icon"></label>     
+                        <label for="heart-checkbox-1" class="heart-checkbox-icon" aria-label="Like this item"></label>     
                         <input type="checkbox" id="heart-checkbox-1" class="heart-checkbox">
                     </div>
                 </div>     
