--- a/mens-jackets.html
+++ b/mens-jackets.html
@@ -24,8 +24,8 @@
 <body>
     <header>
         <nav class="nav__content">
+            <label for="menu-checkbox" id="menu-icon" class="hamburger-icon" aria-label="Like this item"><i class="fa-solid fa-bars"></i></label>
             <input type="checkbox" id="menu-checkbox">
-            <label for="menu-checkbox" id="menu-icon" class="hamburger-icon"><i class="fa-solid fa-bars"></i></label>
             <ul class="nav-links">
                 <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
                 <li><a href="mens-jackets.html">Men's</a></li>
@@ -92,7 +92,7 @@
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
                         <label for="heart-checkbox-2" class="heart-checkbox-icon" aria-label="Like this item"></label>     
-                        <input type="checkbox" id="heart-checkbox-2" class="heart-checkbox" aria-label="Like this item">
+                        <input type="checkbox" id="heart-checkbox-2" class="heart-checkbox">
                     </div>                
                 </div>
             </div>
@@ -108,8 +108,8 @@
                     <p class="price__product">$79</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
+                        <label for="heart-checkbox-3" class="heart-checkbox-icon" aria-label="Like this item"></label>     
                         <input type="checkbox" id="heart-checkbox-3" class="heart-checkbox">
-                        <label for="heart-checkbox-3" class="heart-checkbox-icon"></label>     
                     </div>                  
                 </div>
             </div>
@@ -124,8 +124,8 @@
                     <p class="price__product">$79</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
+                        <label for="heart-checkbox-4" class="heart-checkbox-icon" aria-label="Like this item"></label> 
                         <input type="checkbox" id="heart-checkbox-4" class="heart-checkbox">
-                        <label for="heart-checkbox-4" class="heart-checkbox-icon"></label>     
                     </div>                  
                 </div>
             </div>
@@ -143,8 +143,8 @@
                     <p class="price__product">$79</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
+                        <label for="heart-checkbox-5" class="heart-checkbox-icon" aria-label="Like this item"></label>  
                         <input type="checkbox" id="heart-checkbox-5" class="heart-checkbox">
-                        <label for="heart-checkbox-5" class="heart-checkbox-icon"></label>     
                     </div>                  
                 </div>
             </div>
@@ -160,8 +160,8 @@
                     <p class="price__product">$79</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
+                        <label for="heart-checkbox-6" class="heart-checkbox-icon" aria-label="Like this item"></label>  
                         <input type="checkbox" id="heart-checkbox-6" class="heart-checkbox">
-                        <label for="heart-checkbox-6" class="heart-checkbox-icon"></label>     
                     </div>                  
                 </div>
             </div>
