--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <body>
         <header>
             <nav class="nav__content">
-                <label for="menu-checkbox" id="menu-icon" class="hamburger-icon"><i class="fa-solid fa-bars"></i></label>
-                <input type="checkbox" id="menu-checkbox" aria-label="Like this item">
+                <label for="menu-checkbox" id="menu-icon" class="hamburger-icon" aria-label="Like this item"><i class="fa-solid fa-bars"></i></label>
+                <input type="checkbox" id="menu-checkbox">
                 <ul class="nav-links">
                         <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
                         <li><a href="mens-jackets.html">Men's</a></li>
