--- a/product.html
+++ b/product.html
@@ -78,8 +78,8 @@
                 <p class="price__product price__cart">$79</p>
                 <div class="cart__actions">
                     <a href="cart.html" class="add-to-cart-button">Add to Cart</a>
+                    <label for="heart-checkbox-7" class="heart-checkbox-icon heart-checkbox-7" aria-label="Like this item"></label> 
                     <input type="checkbox" id="heart-checkbox-7" class="heart-checkbox">
-                    <label for="heart-checkbox-7" class="heart-checkbox-icon heart-checkbox-7"></label> 
                 </div>
             </div>
             <div>
@@ -113,8 +113,8 @@
                     <p class="price-extra-product">$89</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
+                        <label for="heart-checkbox-8" class="heart-checkbox-icon" aria-label="Like this item"></label>     
                         <input type="checkbox" id="heart-checkbox-8" class="heart-checkbox">
-                        <label for="heart-checkbox-8" class="heart-checkbox-icon"></label>     
                     </div>                  
                 </div>
             </div>
@@ -131,8 +131,8 @@
                     <p class="price-extra-product">$99</p>
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div>
+                        <label for="heart-checkbox-9" class="heart-checkbox-icon" aria-label="Like this item"></label>     
                         <input type="checkbox" id="heart-checkbox-9" class="heart-checkbox">
-                        <label for="heart-checkbox-9" class="heart-checkbox-icon"></label>     
                     </div>                  
                 </div>
             </div>
@@ -151,7 +151,7 @@
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div>
                         <input type="checkbox" id="heart-checkbox-10" class="heart-checkbox">
-                        <label for="heart-checkbox-10" class="heart-checkbox-icon"></label>     
+                        <label for="heart-checkbox-10" class="heart-checkbox-icon" aria-label="Like this item"></label>     
                     </div>                  
                 </div>
             </div>
