--- a/cart.html
+++ b/cart.html
@@ -93,7 +93,7 @@
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div>
                         <input type="checkbox" id="heart-checkbox-11" class="heart-checkbox">
-                        <label for="heart-checkbox-11" class="heart-checkbox-icon"></label>     
+                        <label for="heart-checkbox-11" class="heart-checkbox-icon" aria-label="Like this item"></label>     
                     </div>                 
                  </div>
             </div>
@@ -111,7 +111,7 @@
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div>
                         <input type="checkbox" id="heart-checkbox-12" class="heart-checkbox">
-                        <label for="heart-checkbox-12" class="heart-checkbox-icon"></label>     
+                        <label for="heart-checkbox-12" class="heart-checkbox-icon" aria-label="Like this item"></label>     
                     </div>                  
                 </div>
             </div>
@@ -130,7 +130,7 @@
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div>
                         <input type="checkbox" id="heart-checkbox-13" class="heart-checkbox">
-                        <label for="heart-checkbox-13" class="heart-checkbox-icon"></label>     
+                        <label for="heart-checkbox-13" class="heart-checkbox-icon" aria-label="Like this item"></label>     
                     </div>                  
                 </div>
             </div>
