--- a/confirmation.html
+++ b/confirmation.html
@@ -65,7 +65,7 @@
             </section>
             <section class="order-details">
                 <div>
-                    <h4>Order Details</h4>
+                    <h2 class="order-heading">Order Details</h2>
                 </div>
                     <div class="order-details__content">
                         <div class="cart-items">
