--- a/product.html
+++ b/product.html
@@ -63,7 +63,7 @@
                     <div class="circle-green-big"></div>
                     <div class="circle-black-big"></div>
                 </div>
-                <div class="sizes">
+                <fieldset class="sizes">
                     <input type="radio" id="size-s" name="size" value="s" class="size-radio">
                     <label for="size-s" class="size-label circle-size">S</label>
                     <input type="radio" id="size-m" name="size" value="m" class="size-radio">
@@ -74,12 +74,12 @@
                     <label for="size-xl" class="size-label circle-size">XL</label>
                     <input type="radio" id="size-xxl" name="size" value="xxl" class="size-radio">
                     <label for="size-xxl" class="size-label circle-size">XXL</label>
-                </div>
+                </fieldset>
                 <p class="price__product price__cart">$79</p>
                 <div class="cart__actions">
                     <a href="cart.html" class="add-to-cart-button">Add to Cart</a>
-                    <label for="heart-checkbox-7" class="heart-checkbox-icon heart-checkbox-7" aria-label="Like this item"></label> 
                     <input type="checkbox" id="heart-checkbox-7" class="heart-checkbox">
+                    <label for="heart-checkbox-7" class="heart-checkbox-icon heart-checkbox-7" aria-label="Like this item"></label> 
                 </div>
             </div>
             <div>
@@ -113,8 +113,8 @@
                     <p class="price-extra-product">$89</p>
                     <i class="fa-solid fa-cart-shopping shoppingcart"></i>
                     <div>
-                        <label for="heart-checkbox-8" class="heart-checkbox-icon" aria-label="Like this item"></label>     
                         <input type="checkbox" id="heart-checkbox-8" class="heart-checkbox">
+                        <label for="heart-checkbox-8" class="heart-checkbox-icon" aria-label="Like this item"></label>     
                     </div>                  
                 </div>
             </div>
@@ -131,8 +131,8 @@
                     <p class="price-extra-product">$99</p>
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div>
-                        <label for="heart-checkbox-9" class="heart-checkbox-icon" aria-label="Like this item"></label>     
                         <input type="checkbox" id="heart-checkbox-9" class="heart-checkbox">
+                        <label for="heart-checkbox-9" class="heart-checkbox-icon" aria-label="Like this item"></label>     
                     </div>                  
                 </div>
             </div>
