--- a/checkout.html
+++ b/checkout.html
@@ -72,10 +72,14 @@
                             <label for="creditcard">Credit Card</label>
                         </div>
                         <div>
-                            <input type="tel" id="creditcardnumber" name="creditcardnumber" title="Enter Your Card Number" class="form__input payment__info" placeholder="Card Number" required>
-                            <input type="text" id="cardholdername" name="cardholdername" title="Enter Cardholder Name" class="form__input payment__info" placeholder="Cardholder Name" required>
-                            <input type="tel" id="expirationdate" name="expirationdate" title="Enter Expiration Date" class="form__input payment__info" placeholder="Exp. Date MM.YYYY" required>
-                            <input type="tel" id="cvv" name="cvv" title="Enter CVV code" class="form__input payment__info" placeholder="CVV" required>
+                            <label for="creditcardnumber">Card Number</label>
+                            <input type="tel" id="creditcardnumber" name="creditcardnumber" title="Enter Your Card Number" class="form__input payment__info" required>
+                            <label for="cardholdername">Cardholder Name</label>
+                            <input type="text" id="cardholdername" name="cardholdername" title="Enter Cardholder Name" class="form__input payment__info" required>
+                            <label for="expirationdate">Expiration Date</label>
+                            <input type="tel" id="expirationdate" name="expirationdate" title="Enter Expiration Date" class="form__input payment__info" placeholder="MM.YYYY" required>
+                            <label for="cvv">CVV</label>
+                            <input type="tel" id="cvv" name="cvv" title="Enter CVV code" class="form__input payment__info" required>
                         </div>
                     </div>
                 <div class="payment-method">
