--- a/product.html
+++ b/product.html
@@ -64,6 +64,7 @@
                     <div class="circle-black-big"></div>
                 </div>
                 <fieldset class="sizes">
+                    <legend>Size:</legend>
                     <input type="radio" id="size-s" name="size" value="s" class="size-radio">
                     <label for="size-s" class="size-label circle-size">S</label>
                     <input type="radio" id="size-m" name="size" value="m" class="size-radio">
